add user_id
